#
# Copyright © 2010-2023 OddSource Code (license@oddsource.io)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[project]
name = "ifaddrs4py"
description = "A Python 3 + C++ extension for retrieving detailed information about system network interfaces."
readme = "README.rst"
authors = [
    {name = "Nick Williams", email = "nicholas@nicholaswilliams.net"},
]
keywords = ["ifaddrs", "getifaddrs", "GetAdaptersAddresses", "network", "interfaces", "addresses"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: BSD",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Software Development",
]
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = ["typing-extensions~=4.8"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/OddSource/ifaddrs4u"
"Python Source" = "https://github.com/OddSource/ifaddrs4u/blob/master/ifaddrs4cpp"
"Issue Tracker" = "https://github.com/OddSource/ifaddrs4u/issues"

[project.optional-dependencies]
test = ["pytest", "mypy", "flake8"]
dev = ["pytest", "mypy", "flake8"]

[tool.setuptools.packages.find]
where = ["source/python/production"]
include = ["ifaddrs4py"]
namespaces = false

[tool.setuptools.package-data]
ifaddrs4py = ["my.typed"]

[tool.setuptools.dynamic]
version = {attr = "ifaddrs4py.version.__VERSION__"}

[build-system]
requires = ["setuptools >= 65.7.0"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
follow_imports = "normal"
exclude = ["build"]

[[tool.mypy.overrides]]
module = "ifaddrs4py.*"
